<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.crate</groupId>
  <artifactId>crate</artifactId>
  <version>5.6.0</version>
  <packaging>pom</packaging>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <parallel>suites</parallel>
          <redirectTestOutputToFile>true</redirectTestOutputToFile>
          <includes>
            <include>**/Test*.java</include>
            <include>**/*IT.java</include>
            <include>**/*Test.java</include>
            <include>**/*Tests.java</include>
          </includes>
          <systemPropertyVariables>
            <worker.id>$${surefire.forkNumber}</worker.id>
          </systemPropertyVariables>
          <properties>
            <configurationParameters>
              junit.jupiter.execution.parallel.enabled = true
            </configurationParameters>
          </properties>
          <!-- by default is false but is set to true by `serverTest` profile to avoid running tests
               for modules on which `server` module depends on, when running `mvn -Pserver test` -->
          <skip>${skipRunTests}</skip>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>3.2.2</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
          <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
          <includeTestResources>false</includeTestResources>
          <linkXRef>false</linkXRef>
        </configuration>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.mvnsearch</groupId>
        <artifactId>toolchains-maven-plugin</artifactId>
        <version>4.5.0</version>
        <executions>
          <execution>
            <goals>
              <goal>toolchain</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <toolchains>
            <jdk>
              <version>${versions.jdk}</version>
              <vendor>temurin</vendor>
            </jdk>
          </toolchains>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.11</version>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>de.thetaphi</groupId>
        <artifactId>forbiddenapis</artifactId>
        <version>3.6</version>
          <configuration>
            <failOnUnsupportedJava>false</failOnUnsupportedJava>
            <bundledSignatures>
              <bundledSignature>jdk-unsafe</bundledSignature>
              <bundledSignature>jdk-deprecated</bundledSignature>
              <bundledSignature>jdk-non-portable</bundledSignature>
              <bundledSignature>jdk-reflection</bundledSignature>
            </bundledSignatures>
            <signaturesFiles>
              <signaturesFile>
                ${maven.multiModuleProjectDirectory}/forbidden-signatures.txt
              </signaturesFile>
            </signaturesFiles>
            <suppressAnnotations>
              <suppressAnnotation>io.crate.common.SuppressForbidden</suppressAnnotation>
            </suppressAnnotations>
          </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-jlink-plugin</artifactId>
        <version>3.1.0</version>
        <extensions>true</extensions>
        <configuration>
          <addModules>
            <addModule>java.base</addModule>
            <addModule>java.logging</addModule>
            <addModule>java.compiler</addModule>
            <addModule>java.desktop</addModule>
            <addModule>java.management</addModule>
            <addModule>java.naming</addModule>
            <addModule>java.rmi</addModule>
            <addModule>java.scripting</addModule>
            <addModule>java.security.jgss</addModule>
            <addModule>java.security.sasl</addModule>
            <addModule>java.sql</addModule>
            <addModule>jdk.unsupported</addModule>
            <addModule>jdk.management</addModule>
            <addModule>jdk.management.agent</addModule>
            <addModule>jdk.crypto.ec</addModule>

            <!-- These are required to use https://github.com/crate/jmx_exporter -->
            <addModule>java.instrument</addModule>
            <addModule>jdk.httpserver</addModule>

            <!-- To support -XX:StartFlightRecording=[...] -->
            <addModule>jdk.jfr</addModule>

            <addModule>jdk.jcmd</addModule>
          </addModules>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.3.0</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>checkstyle</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <reportSets>
          <reportSet>
            <reports>
              <report>report</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>

    <!-- see surefire plugin configuration for explanation -->
    <skipRunTests>false</skipRunTests>

    <versions.jdk>21.0.1</versions.jdk>
    <versions.annotations>24.0.1</versions.annotations>
    <versions.log4j>2.20.0</versions.log4j>
    <versions.assertj>3.23.1</versions.assertj>
    <versions.junit5>5.10.0</versions.junit5>
    <versions.junit>4.13.2</versions.junit>
    <versions.randomizedrunner>2.8.1</versions.randomizedrunner>
    <versions.jackson>2.15.2</versions.jackson>
    <versions.jopt_simple>6.0-alpha-3</versions.jopt_simple>
    <versions.antlr>4.13.1</versions.antlr>
    <versions.quickcheck>1.0</versions.quickcheck>
    <versions.hppc>0.8.2</versions.hppc>
    <versions.netty>4.1.101.Final</versions.netty>
    <versions.lucene>9.8.0</versions.lucene>
    <versions.spatial4j>0.8</versions.spatial4j>
    <versions.jts>1.19.0</versions.jts>
    <versions.jna>5.12.1</versions.jna>
    <versions.tdigest>3.2</versions.tdigest>
    <versions.hdrhistogram>2.1.12</versions.hdrhistogram>
    <versions.caffeine>3.1.6</versions.caffeine>
    <versions.jodatime>2.12.2</versions.jodatime>
    <versions.aws>1.12.353</versions.aws>
    <versions.commonsmath>3.6.1</versions.commonsmath>
    <versions.jaxb_api>2.3.1</versions.jaxb_api>
    <versions.graalvm>23.0.2</versions.graalvm>

    <versions.hamcrest>2.2</versions.hamcrest>
    <versions.mockito>4.9.0</versions.mockito>
    <versions.jdbc>42.7.0</versions.jdbc>
    <versions.jsonassert>1.5.1</versions.jsonassert>

    <versions.azure_storage>8.6.6</versions.azure_storage>
    <versions.azure_keyvault>1.2.4</versions.azure_keyvault>

    <versions.jmh>1.37</versions.jmh>
  </properties>

  <modules>
    <module>libs/shared</module>
    <module>libs/dex</module>
    <module>libs/es-x-content</module>
    <module>libs/cli</module>
    <module>libs/guice</module>
    <module>libs/sql-parser</module>
    <module>libs/pgwire</module>
    <module>server</module>
    <module>plugins/es-analysis-common</module>
    <module>plugins/es-analysis-phonetic</module>
    <module>plugins/es-discovery-ec2</module>
    <module>plugins/es-repository-s3</module>
    <module>plugins/es-repository-url</module>
    <module>plugins/es-repository-azure</module>
    <module>plugins/dns-discovery</module>
    <module>plugins/cr8-copy-s3</module>
    <module>extensions/functions</module>
    <module>extensions/lang-js</module>
    <module>extensions/jmx-monitoring</module>
    <module>jlink-jdk</module>
    <module>app</module>
    <module>benchmarks</module>
  </modules>

  <profiles>
    <profile>
      <id>server</id>
      <properties>
        <skipRunTests>true</skipRunTests>
      </properties>
      <modules>
        <module>server</module>
      </modules>
    </profile>
  </profiles>
</project>
